Add slides credits

--- a/slides/index.html
+++ b/slides/index.html
@@ -315,6 +315,11 @@
       <img src="pictures/dev-edition/borrador.png"
            class="middle"
            alt="Firefox OS phones">
+      <small class="credits">
+        <a href="https://developer.mozilla.org/es/docs/Herramientas/Borrador">
+          https://developer.mozilla.org/es/docs/Herramientas/Borrador
+        </a>
+      </small>
       <footer class="notes">
       </footer>
     </section>
@@ -345,6 +350,11 @@
       <img src="pictures/dev-edition/estilos.png"
            class="middle"
            alt="Firefox OS phones">
+      <small class="credits">
+        <a href="https://developer.mozilla.org/es/docs/Tools/Editor_Estilo">
+          https://developer.mozilla.org/es/docs/Tools/Editor_Estilo
+        </a>
+      </small>
       <footer class="notes">
       </footer>
     </section>
@@ -362,6 +372,11 @@
         <li>Guardar cambios</li>
         <li>Importar archivos</li>
       </ul>
+      <ul class="inline">
+        <li>Panel de hojas de estilo</li>
+        <li>Panel de edición</li>
+        <li>Barra lateral de media queries</li>
+      </ul>
       <footer class="notes">
       </footer>
     </section>
@@ -375,6 +390,11 @@
       <img src="pictures/dev-edition/red.png"
            class="middle"
            alt="Firefox OS phones">
+      <small class="credits">
+        <a href="https://developer.mozilla.org/es/docs/Tools/Monitor_de_Red">
+          https://developer.mozilla.org/es/docs/Tools/Monitor_de_Red
+        </a>
+      </small>
       <footer class="notes">
       </footer>
     </section>
@@ -388,6 +408,11 @@
       <img src="pictures/dev-edition/almacenamiento.png"
            class="middle"
            alt="Firefox OS phones">
+      <small class="credits">
+        <a href="https://developer.mozilla.org/en-US/docs/Tools/Storage_Inspector">
+          https://developer.mozilla.org/en-US/docs/Tools/Storage_Inspector
+        </a>
+      </small>
       <footer class="notes">
       </footer>
     </section>
@@ -396,11 +421,16 @@
   <div id="firefox-dom" class="slide cover w"><div>
     <section>
       <header>
-        <h2>Inspector de DOM y estilos</h2>
+        <h2>Inspector de página</h2>
       </header>
       <img src="pictures/dev-edition/dom.png"
            class="middle"
            alt="Firefox OS phones">
+      <small class="credits">
+        <a href="https://developer.mozilla.org/es/docs/Tools/Page_Inspector">
+          https://developer.mozilla.org/es/docs/Tools/Page_Inspector
+        </a>
+      </small>
       <footer class="notes">
       </footer>
     </section>
@@ -414,6 +444,11 @@
       <img src="pictures/dev-edition/consola.png"
            class="middle"
            alt="Firefox OS phones">
+      <small class="credits">
+        <a href="https://developer.mozilla.org/es/docs/Tools/Web_Console">
+          https://developer.mozilla.org/es/docs/Tools/Web_Console
+        </a>
+      </small>
       <footer class="notes">
       </footer>
     </section>
@@ -431,7 +466,7 @@
         <li>Seguridad</li>
         <li>Peticiones de red</li>
       </ul>
-      <ul class="oneline">
+      <ul class="inline">
         <li>Barra de herramientas</li>
         <li>Línea de comandos</li>
         <li>Panel de mensajes</li>
@@ -449,6 +484,11 @@
       <img src="pictures/dev-edition/depurador.png"
            class="middle"
            alt="Firefox OS phones">
+      <small class="credits">
+        <a href="https://developer.mozilla.org/es/docs/Tools/Debugger">
+          https://developer.mozilla.org/es/docs/Tools/Debugger
+        </a>
+      </small>
       <footer class="notes">
       </footer>
     </section>
@@ -481,6 +521,11 @@
       <img src="pictures/dev-edition/adaptable.png"
            class="middle"
            alt="Firefox OS phones">
+      <small class="credits">
+        <a href="https://developer.mozilla.org/es/docs/Tools/Responsive_Design_View">
+          https://developer.mozilla.org/es/docs/Tools/Responsive_Design_View
+        </a>
+      </small>
       <footer class="notes">
       </footer>
     </section>
