Add DevTools list

--- a/slides/index.html
+++ b/slides/index.html
@@ -307,6 +307,35 @@
     </section>
   </div></div>
 
+  <div id="list" class="slide"><div>
+    <section>
+      <header>
+        <h2>Herramientas del desarrollador de Web</h2>
+      </header>
+      <ol class="lots">
+        <li style="font-size: 22px;">Borrador</li>
+        <li style="font-size: 22px;">Editor de estilos</li>
+        <li style="font-size: 22px;">Editor de sombreadores</li>
+        <li style="font-size: 22px;">Audio Web</li>
+        <li style="font-size: 22px;">Inspector de página</li>
+        <li style="font-size: 22px;">Consola Web</li>
+        <li style="font-size: 22px;">Depurador</li>
+        <li style="font-size: 22px;">Monitor de red</li>
+        <li style="font-size: 22px;">Inspector de Almacenamiento</li>
+        <li style="font-size: 22px;">Barra de<br>herramientas</li>
+        <li style="font-size: 22px;">Capturar color</li>
+        <li style="font-size: 22px;">Seleccionar iframes</li>
+        <li style="font-size: 22px;">Ver código fuente</li>
+        <li style="font-size: 22px;">WebIDE</li>
+        <li style="font-size: 22px;">Depuración remota</li>
+        <li style="font-size: 22px;">Vista de diseño adaptable</li>
+        <li style="font-size: 22px;">Herramientas de rendimiento</li>
+      </ol>
+      <footer class="notes">
+      </footer>
+    </section>
+  </div></div>
+
   <div id="firefox-borrador" class="slide cover w"><div>
     <section>
       <header>
